fixed text wrapping problem. reverted to paper card to display reviews

--- a/src/login-fb/login-fb.css
+++ b/src/login-fb/login-fb.css
@@ -146,3 +146,11 @@ iron-list {
         overflow: hidden;
     };
 }
+
+#typeReview{
+    margin-bottom: 20px;
+}
+
+.card{
+    padding: 5px;
+}
